# runcpp

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json
benchmarks/: CMakeLists.txt  main.cpp
cmake/: sanitize.cmake
ext/: CMakeLists.txt
ext/include/ext/: stackfull_exception.hpp
ext/src/: stackfull_exception.cpp
src/: main.cpp
src/tasks/: CMakeLists.txt
src/tasks/fibonacci/: CMakeLists.txt  fibonacci.cpp  fibonacci.hpp
src/tasks/manacher/: CMakeLists.txt  manacher.cpp  manacher.hpp
src/tasks/max_subsequence/: CMakeLists.txt  max_subsequence.cpp  max_subsequence.hpp
src/tasks/smallestklen/: CMakeLists.txt  smallest_k_length.cpp  smallest_k_length.hpp
tests/: CMakeLists.txt
tests/fibonacci/: fibonacci.cpp
tests/manacher/: manacher.cpp
tests/max_subsequence/: max_subsequence.cpp
tests/smallestklen/: smallestklen.cpp
